=== gedit 2.16.1 ===

2006-10-01  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.16.1 released.

2006-10-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-spinner.c: sync to latest ephy code.
	Should fix bug #330415, bug #357456 and save some
	memory.

2006-09-28  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-saver.c: handle EINTR and plug a leak
	on a seldomly used codepath. Poited out by Alexander Larsson.

2006-09-26  Paolo Borelli  <pborelli@katamail.com>

        * bindings/python/Makefile.am: use $(MAKE) instead of 'make'
        Bug #357792. Patch by Marc Brockschmidt.

2006-09-23  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-panel.[ch]:
	* gedit/gedit-prefs-manager-app.[ch]:
	* gedit/gedit-window.c:

	Remember the active page in the side and bottom panel.
	Bug #357120.

2006-09-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/.cvsignore: changed filebrowser.schemas to
	gedit-file-browser.schemas (it got renamed)

2006-09-09  Paolo Maggi  <paolo@gnome.org>

	* gedit/sexy-icon-entry.c: updated from libsexy SVN repository

2006-09-05  Jesse van den Kieboom  <jesse@icecrew.nl>
	
	* plugins/filebrowser/gedit-file-browser-store.c:
	
	Really fixed bug 354397 – crash in filebrowser plugin when going to 
	parent dir. This time the first issue mentioned in the bug report
	is fixed.

2006-09-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-store.c:
	
	Fixed bug 354397 – crash in filebrowser plugin when going to parent dir

=== gedit 2.16.0 ===

2006-09-04  Paolo Maggi  <paolo@gnome.org>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.16.0 released. Updated dependencies.
	
2006-08-28  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-plugin.c: disable showing
	an error message when the error occurred when setting a root directory
	automatically (either on load or when the first document is loaded)
