@@ -1,3 +1,9 @@
+2006-10-01  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/gedit-document-saver.c (copy_file_data)
+	(async_xfer_progress): fix some C99-style variable initializations, 
+	patch by Jens Granseuer.
+
 === gedit 2.16.1 ===
 
 2006-10-01  Paolo Borelli  <pborelli@katamail.com>
